test/functions/resolution/errors/testBadCallCandidates.16-all.good
testBadCallCandidates.chpl:42: In method 'test':
testBadCallCandidates.chpl:44: error: unresolved call 'D.foo("hi")'
testBadCallCandidates.chpl:33: note: this candidate did not match: D.foo(x: C)
testBadCallCandidates.chpl:44: note: because actual argument #1 with type 'string'
testBadCallCandidates.chpl:33: note: is passed to formal 'x: C'
testBadCallCandidates.chpl:44: note: other candidates are:
testBadCallCandidates.chpl:5: note:   C.foo(x: string)
testBadCallCandidates.chpl:59: note:   foo(x: C)
testBadCallCandidates.chpl:62: note:   foo(x: D)
